acortado parrafo contacto panaderia

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -73,10 +73,7 @@
                     facere, rem, itaque facilis suscipit ipsam ullam deleniti at vero illum doloribus sint 
                     tempora quidem vitae dolor 
                     repudiandae impedit, expedita quis.
-                     Est molestiae amet blanditiis neque voluptates minus corporis eius nemo, quam laboriosam 
-                     reiciendis laudantium magni deserunt delectus rerum. Assumenda facere voluptas cum numquam
-                      omnis, est quibusdam quia nobis distinctio saepe, dolor fugiat unde quidem deleniti 
-                      dolore soluta ab cumque animi? Eligendi quo veniam excepturi numquam animi debitis tempora 
+                     Eligendi quo veniam excepturi numquam animi debitis tempora 
                       vel eaque repellendus! Asperiores nobis quas consectetur incidunt delectus eum exercitationem
                        molestias molestiae cum veritatis esse illum porro deleniti ea debitis maxime illo distinctio 
                        perferendis fugiat ut, praesentium, possimus ad accusamus reprehenderit.
