--- a/pages/productos.html
+++ b/pages/productos.html
@@ -68,11 +68,11 @@
             </div>
           </nav>
           <section class="container">
-           <h1 class="display-2 text-center">Galeria de productos</h1>
+           <h1 class="display-2 text-center text-primary">Galeria de productos</h1>
            <hr>
            <article class="row">
                <div class="col-sm-12 col-md-4 col-lg-3 my-3 d-none d-sm-none d-md-block">
-                 <div class="card">
+                 <div class="card shadow">
                      <img src="../img/productos/Brioche-larga-oscura_00059_portfolio1.jpg" alt="Pan Brioche">
                      <div class="card-body my-4 p-3">
                          <h5 class="card-title">Pan Brioche <span class="badge bg-warning">nuevo</span></h5>
@@ -84,7 +84,7 @@
                  </div>
                </div>
                <div class="col-sm-12 col-md-4 col-lg-3 my-3">
-                <div class="card">
+                <div class="card shadow">
                     <img src="../img/productos/Croissant_00018_portfolio1.jpg" alt="Pan Brioche">
                     <div class="card-body my-4 p-3">
                         <h5 class="card-title">Pan Brioche <span class="badge bg-warning">nuevo</span></h5>
@@ -96,7 +96,7 @@
                 </div>
               </div>
               <div class="col-sm-12 col-md-4 col-lg-3 my-3">
-                <div class="card">
+                <div class="card shadow">
                     <img src="../img/productos/Torta-de-chocolate_00098_portfolio.jpg" alt="Torta de chocolate">
                     <div class="card-body my-4 p-3">
                         <h5 class="card-title">Pan Brioche <span class="badge bg-warning">nuevo</span></h5>
@@ -108,7 +108,7 @@
                 </div>
               </div>
               <div class="col-sm-12 col-md-4 col-lg-3 my-3">
-                <div class="card">
+                <div class="card shadow">
                     <img src="../img/productos/Torta-de-chocolate_00098_portfolio.jpg" alt="Torta de chocolate">
                     <div class="card-body my-4 p-3">
                         <h5 class="card-title">Pan Brioche <span class="badge bg-warning">nuevo</span></h5>
@@ -120,7 +120,7 @@
                 </div>
               </div>
               <div class="col-sm-12 col-md-4 col-lg-3 my-3">
-                <div class="card">
+                <div class="card shadow">
                     <img src="../img/productos/Torta-de-chocolate_00098_portfolio.jpg" alt="Torta de chocolate">
                     <div class="card-body my-4 p-3">
                         <h5 class="card-title">Pan Brioche <span class="badge bg-warning">nuevo</span></h5>
@@ -132,7 +132,7 @@
                 </div>
               </div>
               <div class="col-sm-12 col-md-4 col-lg-3 my-3">
-                <div class="card">
+                <div class="card shadow">
                     <img src="../img/productos/Torta-de-chocolate_00098_portfolio.jpg" alt="Torta de chocolate">
                     <div class="card-body my-4 p-3">
                         <h5 class="card-title">Pan Brioche <span class="badge bg-warning">nuevo</span></h5>
@@ -144,7 +144,7 @@
                 </div>
               </div>
               <div class="col-sm-12 col-md-4 col-lg-3 my-3">
-                <div class="card">
+                <div class="card shadow">
                     <img src="../img/productos/Torta-de-chocolate_00098_portfolio.jpg" alt="Torta de chocolate">
                     <div class="card-body my-4 p-3">
                         <h5 class="card-title">Pan Brioche <span class="badge bg-warning">nuevo</span></h5>
