--- a/pages/historia.html
+++ b/pages/historia.html
@@ -63,11 +63,11 @@
     </header>
     <main>
       <section class="container">
-        <h1 class="display-2 text-center">Nuestra historia</h1>
+        <h1 class="display-2 text-center text-primary">Nuestra historia</h1>
         <hr />
         <article class="row my-4">
           <aside class="col-sm-12 col-md-6">
-            <h3 class="display-6">Lorem, ipsum dolor.</h3>
+            <h3 class="display-6 bg-light">Lorem, ipsum dolor.</h3>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque
               eum rem repellendus perferendis unde cum quasi exercitationem!
