--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -61,7 +61,7 @@
 
     <main>
           <section class="container">
-           <h1 class="display-2 text-center">Contactanos</h1>
+           <h1 class="display-1 text-center text-danger">Contactanos</h1>
            <hr>
            <section class="row">
                <article class="col-sm-12 col-md-6">
@@ -102,7 +102,7 @@
                  <div class="mb-3">
                   <input type="checkbox"class="form-check-input">
                   <label class="form-check-lable">Recibir novedades</label>
-                  <button type="submit" class="btn btn-primary">Enviar</button>
+                  <button type="submit" class="btn btn-danger">Enviar</button>
                  </div>
                   </form>
                </article>
